--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Imports: osfr, readr
+Imports: osfr, readr, collapse
 Suggests: tibble
