--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: covidAgeData
 Title: Get Data from COVerAGE-DB
-Version: 0.0.1
+Version: 0.0.2
 Authors@R:
     person(given = "Erez",
            family = "Shomron",
@@ -13,5 +13,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Imports: osfr, readr, collapse
+Imports: osfr, collapse, data.table
 Suggests: tibble
