--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,27 @@
 Package: covidAgeData
-Title: Get Data from COVerAGE-DB
 Version: 0.0.2
+Date: 2020-31-12
+Title: Get Data from COVerAGE-DB
 Authors@R:
-    person(given = "Erez",
-           family = "Shomron",
-           role = c("aut", "cre"),
-           email = "erezshomron@mykolab.com")
-Description: This is a small helper package for downloading
-    and subsetting covid-19 from the COVerAGE-DB Project.
+        person(given = "Erez",
+               family = "Shomron",
+               role = c("aut", "cre"),
+               email = "erezshomron@mykolab.com")
+Maintainer: Erez Shomron <erezshomron@mykolab.com>
+Description: 'covidAgeData' is a small helper package to help with downloading
+        and reading datasets from the 'COVerAGE-DB' Project.
+        If you use 'COVerAGE-DB' data, please include a citation as instructed
+        in the project web page: '<https://github.com/timriffe/covid_age>'.
+URL: https://github.com/eshom/covid-age-data/
+BugReports: https://github.com/eshom/covid-age-data/issues/
+Depends: R (>= 4.0)
+Imports: osfr (>= 0.2.8),
+         collapse (>= 1.4.2),
+         data.table (>= 1.3.14),
+         utils
+Suggests: tibble (>= 3.0.4)
 License: LGPL (>= 2.1)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Imports: osfr, collapse, data.table
-Suggests: tibble
