--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: covidAgeData
-Version: 0.0.2
-Date: 2020-31-12
+Version: 0.0.3
+Date: 2021-01-01
 Title: Get Data from COVerAGE-DB
 Authors@R:
         person(given = "Erez",
@@ -18,7 +18,9 @@ Depends: R (>= 4.0)
 Imports: osfr (>= 0.2.8),
          collapse (>= 1.4.2),
          data.table (>= 1.3.14),
-         utils
+         utils,
+         ff (>= 4.0.4),
+         ffbase (>= 0.13.1)
 Suggests: tibble (>= 3.0.4)
 License: LGPL (>= 2.1)
 Encoding: UTF-8
