--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,9 @@ Imports: osfr (>= 0.2.8),
          data.table (>= 1.3.14),
          utils,
          ff (>= 4.0.4),
-         ffbase (>= 0.13.1)
-Suggests: tibble (>= 3.0.4)
+         ffbase (>= 0.13.1),
+Suggests: tibble (>= 3.0.4),
+          memoise (>= 1.1)
 License: LGPL (>= 2.1)
 Encoding: UTF-8
 LazyData: true
