--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(download_covid)
 export(download_covid_version)
+export(mem_read_subset_covid)
 export(read_covid)
 export(read_subset_covid)
 export(subset_covid)
+importFrom(ff,.rambytes)
+importFrom(ff,vmode)
