--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: covidAgeData
-Version: 0.0.3
-Date: 2021-01-01
+Version: 0.0.4
+Date: 2021-01-28
 Title: Get Data from COVerAGE-DB
 Authors@R:
         person(given = "Erez",
@@ -19,8 +19,7 @@ Imports: osfr (>= 0.2.8),
          collapse (>= 1.4.2),
          data.table (>= 1.3.14),
          utils,
-         ff (>= 4.0.4),
-         ffbase (>= 0.13.1),
+         vroom (>= 1.3.2)
 Suggests: tibble (>= 3.0.4),
           memoise (>= 1.1)
 License: LGPL (>= 2.1)
